fix Contrast Ratio

--- a/src/styles/@nya.css
+++ b/src/styles/@nya.css
@@ -251,7 +251,7 @@ body {
     margin-top: 15rem;
     pointer-events: all;
     opacity: 0.8;
-    background: #697ec4;
+    background: #3E3FAA;
     border-radius: 3px;
     border: 0;
     color: #fff;
